--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,12 @@
 <div style="text-align: center; margin-top: 15px">
+  <form>
+    <div fxLayout="column" fxLayoutAlign="center center">
+        <input type="text" class="form-control" placeholder="Hotel Chain Name" style="width: 25vw">
+        <input type="number" class="form-control" placeholder="Room Capacity" style="width: 25vw">
+        <input type="text" class="form-control" placeholder="Location" style="width: 25vw">
+      <button type="button" class="btn btn-info" style="margin-top: 10px">Submit Search</button>
+    </div>
+  </form>
   <h2>Available Hotels</h2>
 </div>
 <div fxLayout="row wrap" fxLayoutAlign="center center">
@@ -18,6 +26,7 @@
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
+
       <div class="modal-header">
         <h5 class="modal-title" id="exampleModalLabel">Make a booking</h5>
       </div>
