--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -26,7 +26,13 @@
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Signin</a>
+          <a class="nav-link" href="#" data-toggle="modal" data-target="#signInModal">Signin</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" data-toggle="modal" data-target="#signUpModalC">Customer Signup</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" data-toggle="modal" data-target="#signUpModalE">Employee Signup</a>
         </li>
       </ul>
     </div>
