--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -14,8 +14,8 @@
     <div class="card" style="width: 20rem; margin-right: 20px">
       <img class="card-img-top" src="../../assets/hotelpic.jpg" alt="Card image cap">
       <div class="card-body">
-        <h4 class="card-title">Hotel Name</h4>
-        <p class="card-description">Quick Description</p>
+        <h4 class="card-title">{{i["name"]}}</h4>
+        <p class="card-description">{{i["address"]}}</p>
         <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Book Hotel</a>
       </div>
     </div>
