Added hdashboard and made huge application refactor

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
 <app-nav></app-nav>
 
 <router-outlet></router-outlet>
+
+<app-signin [signIn]="signIn"></app-signin>
+<app-signup [signUp]="signUp"></app-signup>
+<app-signupemployee [signUp]="signUpEmployee"></app-signupemployee>
