--- a/src/app/components/librarytable/librarytable.component.html
+++ b/src/app/components/librarytable/librarytable.component.html
@@ -3,20 +3,6 @@
     <h4 class="card-title">{{headerName}}</h4>
   </div>
   <div class="card-body">
-    <div>
-      <button class="btn btn-primary btn-fab btn-fab-mini btn-round {{itemControlColor}}"
-              style="margin-right: 5px;" (click)="editAction()">
-        <i class="material-icons">edit</i>
-      </button>
-      <button class="btn btn-primary btn-fab btn-fab-mini btn-round {{itemControlColor}}"
-              style="margin-right: 5px;" (click)="deleteAction()">
-        <i class="material-icons">close</i>
-      </button>
-      <button class="btn btn-primary btn-fab btn-fab-mini btn-round {{itemControlColor}}"
-              style="margin-right: 5px;" (click)="infoAction()">
-        <i class="material-icons">info</i>
-      </button>
-    </div>
     <table class="table">
       <thead class="{{textColor}}">
       <th>
@@ -50,18 +36,10 @@
       </tbody>
     </table>
   </div>
+  <!--No data for rows check-->
   <div style="text-align: center" *ngIf="tableData.length == 0">
     <h4 class="{{textColor}}">No data found for rows</h4>
   </div>
-  <nav fxLayoutAlign="center center">
-    <ul class="pagination">
-      <li class="page-item"><a class="page-link {{textColor}}" href="#">Previous</a></li>
-      <li class="page-item"><a class="page-link {{textColor}}" href="#">1</a></li>
-      <li class="page-item"><a class="page-link {{textColor}}" href="#">2</a></li>
-      <li class="page-item"><a class="page-link {{textColor}}" href="#">3</a></li>
-      <li class="page-item"><a class="page-link {{textColor}}" href="#">Next</a></li>
-    </ul>
-  </nav>
   <div class="card-footer text-muted">
     Updated 1 min ago
     <button type="button" class="btn btn-round {{btnAddColor}}" (click)="addAction()">{{addText}}</button>
