--- a/src/app/components/hdashboard/hdashboard.component.html
+++ b/src/app/components/hdashboard/hdashboard.component.html
@@ -23,7 +23,7 @@
   <app-infocard [headerName]="'Highest Booked Hotel'"
                 [backgroundColor]="'bg-rose'"
                 [buttonAction]="functioncall"
-                [statValue]="'Hyatt'"
+                [statValue]="highestBookedHotel"
                 [statDescription]="'Ottawa, K1L7A9.'"
                 [buttonString]="'See Chart'" cdkDrag>
   </app-infocard>
