--- a/src/app/components/hdashboard/hdashboard.component.html
+++ b/src/app/components/hdashboard/hdashboard.component.html
@@ -24,7 +24,7 @@
                 [backgroundColor]="'bg-rose'"
                 [buttonAction]="functioncall"
                 [statValue]="highestBookedHotel"
-                [statDescription]="'Ottawa, K1L7A9.'"
+                [statDescription]="'Highest booked'"
                 [buttonString]="'See Chart'" cdkDrag>
   </app-infocard>
 </div>
